<resources>
    <string name="app_name">ITCV</string>

    <!--  Choose default user dialog  -->
    <string name="default_user_chooser_title">Choose a default user:</string>
    <string name="default_user_chooser_hint">Github username</string>
    <string name="default_user_chooser_button">Done</string>

    <!--  Home  -->
    <string name="title_home">Home</string>
    <string name="home_repository_count_label">This user has %s public repositories</string>
    <string name="home_github_avatar_content_description">Github avatar for this profile</string>
    <string name="content_description_home_fab">Search</string>
    <string name="home_profile_all_details_button">See all details</string>


    <!--  Favorites  -->
    <string name="title_favorites">Favorites</string>


    <!--  Search  -->
    <string name="title_search">Search</string>
    <string name="search_hint">Look for a Github profile</string>
    <string name="empty_results_title_label">There are no results.\nPlease try with another text.</string>
    <string name="error_search_results">Sorry, something went wrong.\nPlease try again later.</string>


    <!--  Profile details  -->
    <string name="profile_details_title_profile_details_with_username">%s Details</string>
    <string name="profile_details_member_since_title">Member since</string>
    <string name="profile_details_title_profile_details">Profile Details</string>
    <string name="profile_details_location">Location: %s</string>
    <string name="profile_details_followers_count">%s followers</string>
    <string name="profile_details_topics_list_title">Topics</string>
    <string name="profile_details_repository_name_content_description">Repository %s</string>
    <string name="profile_details_repository_list_title">Repositories</string>
    <string name="no_watchers">No watchers</string>
    <string name="one_watcher">One watcher</string>
    <plurals name="profile_details_repository_watchers_content_description">
        <item quantity="zero">@string/no_watchers</item>
        <item quantity="one">@string/one_watcher</item>
        <item quantity="other">%s watchers</item>
    </plurals>

    <string name="no_stars">No stars</string>
    <string name="one_star">One star</string>
    <plurals name="profile_details_repository_stars_content_description">
        <item quantity="zero">@string/no_stars</item>
        <item quantity="one">@string/one_star</item>
        <item quantity="other">%s stars</item>
    </plurals>

    <string name="no_forks">No forks</string>
    <string name="one_fork">One fork</string>
    <plurals name="profile_details_repository_forks_content_description">
        <item quantity="zero">@string/no_forks</item>
        <item quantity="one">@string/one_fork</item>
        <item quantity="other">%s forks</item>
    </plurals>

    <string name="profile_details_repository_link_button">Go to</string>
    <string name="profile_details_repository_link_button_content_description">Go to the Github page</string>
    <string name="profile_details_repository_website_link_button">Go to</string>
    <string name="profile_details_repository_website_link_button_content_description">Go to the website</string>


    <!--  Settings  -->
    <string name="title_settings">Settings</string>
    <string name="settings_about">About this app</string>

    <!--  About this app  -->
    <string name="title_about">About ITCV</string>


    <!--  Generic  -->
    <string name="error_dialog_title">Sorry…</string>
    <string name="error_dialog_generic_message">Something went wrong.</string>
    <string name="error_dialog_no_network">You need a Internet connection.</string>
    <string name="error_dialog_positive_button">OK</string>
    <string name="error_dialog_negative_button">Close</string>

</resources>