<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jmlb0003.itcv.features.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/navigation_home_to_search_by_fab"
            app:destination="@id/navigation_search" />

    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.jmlb0003.itcv.features.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.jmlb0003.itcv.features.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.jmlb0003.itcv.features.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">

        <!--    TODO Navigate to profile details screen    -->
        <action
            android:id="@+id/navigation_search_to_details"
            app:destination="@id/navigation_favorites" />

    </fragment>

    <fragment
        android:id="@+id/itemFragment"
        android:name="com.jmlb0003.itcv.ItemFragment"
        android:label="fragment_item_list"
        tools:layout="@layout/fragment_item_list" />
</navigation>