<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.profile.ProfileDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/github_avatar"
            android:layout_width="@dimen/home_avatar_image_width"
            android:layout_height="@dimen/home_avatar_image_height"
            android:layout_margin="@dimen/margin_default"
            android:contentDescription="@string/home_github_avatar_content_description"
            android:src="@drawable/ic_avatar_placeholder"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintBottom_toTopOf="@id/member_since_group"
            app:layout_constraintEnd_toStartOf="@id/github_avatar_vertical_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ProgressBar
            android:id="@+id/loading_avatar_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/github_avatar"
            app:layout_constraintEnd_toEndOf="@id/github_avatar"
            app:layout_constraintStart_toStartOf="@id/github_avatar"
            app:layout_constraintTop_toTopOf="@id/github_avatar"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/member_since_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/github_avatar_horizontal_barrier"
            app:layout_constraintEnd_toStartOf="@id/github_avatar_vertical_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/github_avatar">

            <TextView
                android:id="@+id/member_since_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/member_since"
                android:text="@string/profile_details_member_since_title"
                android:textAppearance="?textAppearanceHeadline6" />

            <TextView
                android:id="@+id/member_since"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="31 Dec 2021" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/github_avatar_vertical_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:barrierDirection="end"
            app:constraint_referenced_ids="github_avatar" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintBottom_toTopOf="@id/user_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/github_avatar_vertical_barrier"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Name of the user" />

        <TextView
            android:id="@+id/user_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/user_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/github_avatar_vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Location of the user"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/user_bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/github_avatar_vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/user_location"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="username@somemail.com"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/user_bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/followers_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/github_avatar_vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/user_email"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="This is the bio of the user that might be a bit long..."
            tools:visibility="visible" />

        <TextView
            android:id="@+id/followers_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            app:layout_constraintBottom_toTopOf="@id/github_avatar_horizontal_barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/github_avatar_vertical_barrier"
            app:layout_constraintTop_toBottomOf="@id/user_bio"
            tools:text="This user has X followers" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/github_avatar_horizontal_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="github_avatar,member_since_group" />

        <TextView
            android:id="@+id/user_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/twitter_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/github_avatar_horizontal_barrier"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="www.somewebsite.com"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/twitter_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/topics_list_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_web"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="\@TwitterUsername"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/topics_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:accessibilityHeading="true"
            android:labelFor="@+id/topics_list"
            android:text="@string/profile_details_topics_list_title"
            android:textAppearance="?textAppearanceHeadline4"
            app:layout_constraintBottom_toTopOf="@id/topics_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/twitter_username" />

        <ProgressBar
            android:id="@+id/loading_topics_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/repository_list_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topics_list_title"
            tools:visibility="visible" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/topics_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            app:layout_constraintBottom_toTopOf="@id/repository_list_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topics_list_title" />

        <TextView
            android:id="@+id/repository_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:accessibilityHeading="true"
            android:labelFor="@+id/repository_list"
            android:text="@string/profile_details_repository_list_title"
            android:textAppearance="?textAppearanceHeadline4"
            app:layout_constraintBottom_toTopOf="@id/repository_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topics_list" />

        <ProgressBar
            android:id="@+id/loading_repository_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repository_list_title"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/repository_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repository_list_title"
            tools:listitem="@layout/item_list_repository" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
